# k8s-management-comparison

./: .gitignore  docker-compose.yaml  pyproject.toml
app/admin/: settings.py
comparison/kustomize/base/: deployment.yaml  hpa.yaml  service.yaml
comparison/kustomize/overlays/dev/: deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
comparison/kustomize/overlays/production/: deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  service.yaml
comparison/kustomize/overlays/staging/: deployment.yaml  hpa.yaml  service.yaml
docker/: Dockerfile
kustomize/base/: deployment.yaml  hpa.yaml  service.yaml
kustomize/overlays/dev/: kustomization.yaml  namespace.yaml
kustomize/overlays/production/: kustomization.yaml
tanka/: jsonnetfile.lock.json
tanka/environments/default/: main.jsonnet
