[tool.poetry]
name = "k8s-management-comparison"
version = "0.1.0"
description = ""
authors = ["Eyal Mor <eyal.mor@autodesk.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
